syntax = "proto3";

package yir.s3upload;

option go_package = "yir/s3upload/api;s3pb";

import "google/protobuf/empty.proto";

service S3 {
    // Stream-Block

    // Передача path идет первым сообщением, далее его передавать не нужно
    rpc Upload(stream File) returns (google.protobuf.Empty);
    rpc Get(GetRequest) returns (stream File);

    // SimpleReqBlock

    // лимит передачи gRPC 5мб(не будем менять) Использовать только для маленьких файлов!
    rpc UploadFull(File) returns (google.protobuf.Empty);
    // лимит передачи gRPC 5мб(не будем менять) Использовать только для маленьких файлов!
    rpc GetFull(GetRequest) returns (File);
}

message FileMeta {
    string path = 100;
    string contentType = 200;
}

message File {
    FileMeta fileMeta = 100;  
    bytes fileBin = 200;
}

message GetRequest {
    string path = 100;
}